Fix wrap margin between board and settings

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header{
     flex-direction: column;
     align-items: center;
     gap: 30px;
-    margin-top: -30px;
+    margin-top: 30px;
 }
 
 /* COLOR PANEL */
@@ -156,6 +156,12 @@ footer {
 }
 
 /* MEDIA QUERIES */
+
+@media (max-width: 887px) {
+    .settings {
+        margin-top: -50px;
+    }
+  }
 
 @media (max-width: 630px) {
     .main {
